small alignment fixes in global nav

--- a/src/header/css/header.pcss
+++ b/src/header/css/header.pcss
@@ -88,6 +88,16 @@
 	}
 }
 
+.-app .esri-header-canvas {
+	@media (--width-s) {
+		inset-block-start: calc(var(--header-height-s) + 3px);
+	}
+
+	@media (--width-ml) {
+		inset-block-start: calc(var(--header-height-l) + 3px);
+	}
+}
+
 /* Global Header: Barrier
 /* ========================================================================== */
 
